db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: zefirnikolov/helloworld-db:latest
        args: ["--default-authentication-plugin=mysql_native_password"]
        resources:
          requests:
            memory: 20Mi
            cpu: 100m
#        volumeMounts:
#          - name: mariadb-persistent-storage
#            mountPath: /var/lib/mysql
#      volumes:
#        - name: mariadb-persistent-storage
#          persistentVolumeClaim:
#            claimName: db-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: mariadb
  namespace: default
spec:
  selector:
    app: mariadb
  ports:
    - name: db-connect
      port: 3306
  type: ClusterIP
